--- a/.github/workflows/csvUpdate.yml
+++ b/.github/workflows/csvUpdate.yml
@@ -89,7 +89,7 @@ jobs:
 
               url_path = ''
               column.append(url_path)
-
+              column.append(yaml_data['id'])
               csv_writer.writerow(column)
 
 
@@ -112,7 +112,7 @@ jobs:
               if yaml_files:
                   with open(csv_file_path, 'w', newline='') as csv_file:
                       writer = csv.writer(csv_file)
-                      writer.writerow(['Name', 'Slug', 'Description', 'Details', 'Impact', 'OWASP Category', 'Severity', 'References', 'Content', 'URL Path'])
+                      writer.writerow(['Name', 'Slug', 'Description', 'Details', 'Impact', 'OWASP Category', 'Severity', 'References', 'Content', 'URL Path', 'Test_ID'])
 
                       for yaml_file in yaml_files:
                           yaml_url = yaml_file['html_url']
