--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -128,6 +128,9 @@ jobs:
           echo "Pushing image to ECR..."
           docker push $ECR_REGISTRY/$REGISTRY_ALIAS/akto-api-context-analyzer:$IMAGE_TAG
           echo "::set-output name=image::$ECR_REGISTRY/akto-api-context-analyzer:$IMAGE_TAG"
+          cd ../testing-cli
+          docker buildx build --platform linux/arm64/v8,linux/amd64 -t $ECR_REGISTRY/$REGISTRY_ALIAS/akto-api-testing-cli:$IMAGE_TAG . --push
+          echo "::set-output name=image::$ECR_REGISTRY/akto-api-testing-cli:$IMAGE_TAG"
 
       - name: Push git tag
         id: tag_version
