--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -113,8 +113,6 @@ jobs:
           docker buildx build --platform linux/arm64/v8,linux/amd64 -t $ECR_REGISTRY/akto-api-testing-cli:$IMAGE_TAG . --push
           echo "::set-output name=image::$ECR_REGISTRY/akto-api-testing-cli:$IMAGE_TAG"
 
-          
-
       - name: Configure AWS Credentials for ECR
         if: ${{ github.event.inputs.Environment == 'prod' }}
         uses: aws-actions/configure-aws-credentials@v1
@@ -156,6 +154,9 @@ jobs:
           echo "Pushing image to ECR..."
           docker push $ECR_REGISTRY/$REGISTRY_ALIAS/akto-api-context-analyzer:$IMAGE_TAG
           echo "::set-output name=image::$ECR_REGISTRY/akto-api-context-analyzer:$IMAGE_TAG"
+          cd ../testing-cli
+          docker buildx build --platform linux/arm64/v8,linux/amd64 -t $ECR_REGISTRY/$REGISTRY_ALIAS/akto-api-testing-cli:$IMAGE_TAG . --push
+          echo "::set-output name=image::$ECR_REGISTRY/akto-api-testing-cli:$IMAGE_TAG"
 
       - name: Set up JDK 11
         uses: actions/setup-java@v1
