--- a/apps/dashboard/web/polaris_web/package.json
+++ b/apps/dashboard/web/polaris_web/package.json
@@ -15,6 +15,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "dayjs": "^1.11.5",
+    "deep-diff": "^1.0.2",
+    "deep-object-diff": "^1.1.9",
+    "deepmerge": "^4.3.1",
     "file-saver": "^2.0.5",
     "highcharts": "^11.1.0",
     "highcharts-react-official": "^3.2.0",
